Fix session grid overflow css

--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -45,6 +45,8 @@
 	}
 	ul.sessionsList li {
 		padding-left: 0;
+    padding-right: 1em;
+    width: 100%;
 	}
 	.more_sessions {
 		padding-left: 0;
